[tool.poetry]
name = "horras-backend"
version = "0.1.0"
description = ""
authors = ["yanglinshu <nicolasvandarkholme@outlook.com>"]
readme = "README.md"
packages = [{include = "horras_backend"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.86.0"
easydict = "^1.10"
prisma = "^0.7.0"
dynaconf = "^3.1.11"
uvicorn = {extras = ["standard"], version = "^0.19.0"}


[tool.poetry.group.dev.dependencies]
flake8 = "^5.0.4"
yapf = "^0.32.0"
numba = "^0.56.4"
pandas = "^1.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"